force-app/main/default/objects/Sales_Data_Upload_Configurations__c/Sales_Data_Upload_Configurations__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Sales Data Upload Configurations</label>
</CustomObject>