force-app/main/default/objects/Sales_Data_Upload_Configurations__c/fields/Process_Records_Limit__c.field-meta.xml
<CustomField>
    <fullName>Process_Records_Limit__c</fullName>
    <label>Process Records Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>