force-app/main/default/objects/Sales_Data_Upload_Configurations__c/fields/Successfully_Records_Limit__c.field-meta.xml
<CustomField>
    <fullName>Successfully_Records_Limit__c</fullName>
    <label>Successfully Records Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>