force-app/main/default/objects/Sales_Data_Upload_Configurations__c/fields/With_Error_Records_Limit__c.field-meta.xml
<CustomField>
    <fullName>With_Error_Records_Limit__c</fullName>
    <label>With Error Records Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>